Removed proxy related stuff.